--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Excel To Json</title>
+    <title>Json To Csv</title>
     <link rel="manifest" href="./assets/pwa/manifest.json">
     <link href="./assets/jquery.json-viewer.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
