--- a/index.html
+++ b/index.html
@@ -206,14 +206,13 @@
 
             /*Json Content To CSV content*/
             function jsonToCsv(jsonData) {
-                console.log(jsonData);
                 let csv = '';
                 // Get the headers
                 let headers = Object.keys(jsonData[0]);
                 csv += headers.join(',') + '\n';
                 // Add the data
                 jsonData.forEach(function (row) {
-                    let data = headers.map(header => JSON.stringify(row[header])).join(',');
+                    let data = headers.map(header => row[header]).join(',');
                     csv += data + '\n';
                 });
                 return csv;
